--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><base href="." /><title>Vaeelin E-Sport [EU]</title><style>
+<html><head><base href="https://aalltra.github.io/sponsor1/" /><title>Vaeelin E-Sport [EU]</title><style>
     :root {
         --color1: rgb(45, 72, 158);
         --color2: rgb(30, 177, 196);
