--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Vaeelin E-Sport [EU]</title>
+    <link rel="icon" href="vaeelin..png" type="image/png" sizes="32x32">
     <style>
         :root {
             --color1: rgb(45, 72, 158);
