--- a/index.html
+++ b/index.html
@@ -1613,9 +1613,9 @@
 <footer>
     <p>&copy; 2024 Vaeelin E-Sport [EU]. Tous droits réservés.</p>
     <p>Suivez-nous sur 
-        <a href="" target="_blank" class="animated-underline">Twitter</a>, 
-        <a href="" target="_blank" class="animated-underline">Facebook</a>, et 
-        <a href="" target="_blank" class="animated-underline">Instagram</a>.
+        <a href="" target="_blank" class="animated-underline">Tiktok</a>, 
+        <a href="" target="_blank" class="animated-underline">Twitch</a>, et 
+        <a href="https://discord.gg/gCVQCnmZXK" target="_blank" class="animated-underline">Discord</a>.
     </p>
 </footer>
 
