--- a/index.html
+++ b/index.html
@@ -1613,8 +1613,8 @@
 <footer>
     <p>&copy; 2024 Vaeelin E-Sport [EU]. Tous droits réservés.</p>
     <p>Suivez-nous sur 
-        <a href="" target="_blank" class="animated-underline">Tiktok</a>, 
-        <a href="" target="_blank" class="animated-underline">Twitch</a>, et 
+        <a href="https://www.tiktok.com/@vaee_esport" target="_blank" class="animated-underline">Tiktok</a>, 
+        <a href="https://www.twitch.tv/vaeelin_esport" target="_blank" class="animated-underline">Twitch</a>, et 
         <a href="https://discord.gg/gCVQCnmZXK" target="_blank" class="animated-underline">Discord</a>.
     </p>
 </footer>
