--- a/index.html
+++ b/index.html
@@ -1514,7 +1514,7 @@
 
 <div id="home" class="page active">
     <div class="team-card">
-        <h1 class="neon-glow">Vaeelin E-Sport [EU]</h1>
+        <h1>Vaeelin E-Sport [EU]</h1>
         <p><strong>Date de création:</strong> 28 septembre 2024</p>
         <p><strong>Jeu principal:</strong> Rocket League</p>
         <p><strong>Catégorie:</strong> E-Sport compétitif</p>
