--- a/index.html
+++ b/index.html
@@ -1352,25 +1352,25 @@
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
         }
 
-        .neon-glow {
-            color: var(--color2);
-            text-shadow:
-                0 0 5px var(--color2),
-                0 0 10px var(--color2),
-                0 0 20px var(--color2),
-                0 0 40px var(--color2),
-                0 0 80px var(--color2);
-            transition: text-shadow 0.3s ease;
-        }
+.neon-glow {
+    color: var(--color2);
+    text-shadow:
+        0 0 2px rgba(30, 177, 196, 0.5),
+        0 0 4px rgba(30, 177, 196, 0.3),
+        0 0 6px rgba(30, 177, 196, 0.2),
+        0 0 8px rgba(30, 177, 196, 0.1),
+        0 0 10px rgba(30, 177, 196, 0.05);
+    transition: text-shadow 0.3s ease;
+}
 
-        .neon-glow:hover {
-            text-shadow:
-                0 0 10px var(--color1),
-                0 0 20px var(--color1),
-                0 0 30px var(--color1),
-                0 0 50px var(--color1),
-                0 0 100px var(--color1);
-        }
+.neon-glow:hover {
+    text-shadow:
+        0 0 3px rgba(45, 72, 158, 0.5),
+        0 0 5px rgba(45, 72, 158, 0.3),
+        0 0 7px rgba(45, 72, 158, 0.2),
+        0 0 9px rgba(45, 72, 158, 0.1),
+        0 0 11px rgba(45, 72, 158, 0.05);
+}
 
         .interactive-border {
             position: relative;
@@ -1514,7 +1514,7 @@
 
 <div id="home" class="page active">
     <div class="team-card">
-        <h1>Vaeelin E-Sport [EU]</h1>
+        <h1 class="neon-glow">Vaeelin E-Sport [EU]</h1>
         <p><strong>Date de création:</strong> 28 septembre 2024</p>
         <p><strong>Jeu principal:</strong> Rocket League</p>
         <p><strong>Catégorie:</strong> E-Sport compétitif</p>
