--- a/index.html
+++ b/index.html
@@ -1803,12 +1803,12 @@
             padding: 5px 10px;
             border-radius: 5px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
+            transition: filter 0.3s ease;
             font-size: 0.9rem;
         }
 
         .review-button:hover, .view-reviews:hover {
-            background-color: darken(var(--secondary-color), 10%);
+            filter: brightness(90%);
         }
 
         /* Modal styles */
@@ -1898,6 +1898,82 @@
         .review-text {
             margin-top: 5px;
         }
+
+        .comparison-table th, .comparison-table td {
+            padding: 10px;
+            border: 1px solid var(--accent-color);
+            text-align: center;
+            color: var(--text-color);
+        }
+
+        .comparison-table th {
+            background: var(--primary-color);
+            color: var(--accent-color);
+        }
+
+        .comparison-table tr:nth-child(even) {
+            background: rgba(255, 255, 255, 0.05);
+        }
+
+        .performance-chart {
+            margin-top: 20px;
+        }
+
+        button {
+            border: none;
+            outline: none;
+            padding: 10px 20px;
+            margin: 5px;
+            cursor: pointer;
+            background-color: var(--accent-color);
+            color: var(--text-color);
+            border-radius: 5px;
+            transition: filter 0.3s ease;
+        }
+
+        button:hover {
+            filter: brightness(90%);
+        }
+
+        #save-button, #import-button, #share-button {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        @media (max-width: 768px) {
+            .nav-tabs a {
+                padding: 0.75rem;
+            }
+
+            .component-card {
+                padding: 1rem;
+            }
+
+            .configuration-summary {
+                padding: 1.5rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .theme-options {
+                padding: 0.8rem;
+                gap: 0.3rem;
+            }
+
+            .theme-option {
+                padding: 0.3rem 0.6rem;
+            }
+
+            .custom-theme-inputs input[type="color"] {
+                height: 30px;
+            }
+
+            .components-grid {
+                grid-template-columns: 1fr;
+                gap: 1.5rem;
+            }
+        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -1977,7 +2053,7 @@
                     const card = document.createElement('div');
                     card.className = 'component-card';
                     card.innerHTML = `
-                        <img src="${component.image}" alt="${component.name}" width="600" height="400">
+                        ${component.image ? `<img src="${component.image}" alt="${component.name}" width="600" height="400">` : ''}
                         <h3>${component.name}</h3>
                         <ul>
                             ${component.specs.map(spec => `<li><i class="fas fa-check"></i>${spec}</li>`).join('')}
@@ -1991,9 +2067,9 @@
                             <div class="stars" data-rating="${avgRating}" data-component-id="${componentId}">
                                 ${renderStars(avgRating)}
                             </div>
-                            <button class="review-button" onclick="openReviewModal('${componentId}')">Mettre une note</button>
+                            <button class="review-button" onclick="window.openReviewModal('${componentId}')">Mettre une note</button>
                         </div>
-                        <a href="#reviews" class="view-reviews" onclick="viewReviews('${componentId}')">Voir les avis</a>
+                        <a href="#reviews" class="view-reviews" onclick="window.viewReviews('${componentId}')">Voir les avis</a>
                     `;
                     componentList.appendChild(card);
                 });
@@ -2006,12 +2082,12 @@
                         starsHTML += `<svg class="filled" viewBox="0 0 20 20"><polygon points="10,1 12.59,7.36 19.51,7.63 14,12.14 15.82,19.02 10,15.27 4.18,19.02 6,12.14 0.49,7.63 7.41,7.36"></polygon></svg>`;
                     } else if (i === Math.floor(rating) + 1 && rating % 1 >= 0.5) {
                         starsHTML += `<svg viewBox="0 0 20 20"><defs>
-                                        <linearGradient id="halfGrad">
+                                        <linearGradient id="halfGrad${rating}-${i}">
                                             <stop offset="50%" stop-color="#FFD700"/>
                                             <stop offset="50%" stop-color="#ccc"/>
                                         </linearGradient>
                                      </defs>
-                                     <polygon points="10,1 12.59,7.36 19.51,7.63 14,12.14 15.82,19.02 10,15.27 4.18,19.02 6,12.14 0.49,7.63 7.41,7.36" fill="url(#halfGrad)"></polygon>
+                                     <polygon points="10,1 12.59,7.36 19.51,7.63 14,12.14 15.82,19.02 10,15.27 4.18,19.02 6,12.14 0.49,7.63 7.41,7.36" fill="url(#halfGrad${rating}-${i})"></polygon>
                                    </svg>`;
                     } else {
                         starsHTML += `<svg viewBox="0 0 20 20"><polygon points="10,1 12.59,7.36 19.51,7.63 14,12.14 15.82,19.02 10,15.27 4.18,19.02 6,12.14 0.49,7.63 7.41,7.36" fill="#ccc"></polygon></svg>`;
@@ -2055,7 +2131,7 @@
                         <tr>
                             <td>Spec ${i + 1}</td>
                             <td>${spec}</td>
-                            ${components[category].map(comp => comp !== component ? `<td>${comp.specs[i]}</td>` : '').join('')}
+                            ${components[category].map(comp => comp !== component ? `<td>${comp.specs[i] || '-'}</td>` : '').join('')}
                         </tr>
                     `;
                 });
@@ -2083,9 +2159,9 @@
                         datasets: components[category].map(comp => ({
                             label: comp.name,
                             data: [
-                                Math.random() * 100,
+                                Math.floor(Math.random() * 100),
                                 comp.price[0],
-                                (Math.random() * 100) / comp.price[0] * 1000
+                                Math.floor((Math.random() * 100) / comp.price[0] * 1000)
                             ],
                             backgroundColor: `rgba(${Math.floor(Math.random() * 255)}, ${Math.floor(Math.random() * 255)}, ${Math.floor(Math.random() * 255)}, 0.6)`
                         }))
@@ -2113,7 +2189,7 @@
 
                     const li = document.createElement('li');
                     li.innerHTML = `
-                        <span><i class="fas fa-${getCategoryIcon(category)}"></i>${component.name}</span>
+                        <span><i class="fas fa-${getCategoryIcon(category)}"></i> ${component.name}</span>
                         <span>${price.toLocaleString('fr-FR', {style: 'currency', currency: 'EUR'})}</span>
                     `;
                     summaryList.appendChild(li);
@@ -2125,7 +2201,7 @@
                 updateBudgetChart();
             }
 
-            document.querySelector('.summary-buttons button:last-child').remove();
+            document.querySelector('.summary-buttons').removeChild(document.querySelector('.summary-buttons').lastElementChild);
 
             document.getElementById('order-button').addEventListener('click', () => {
                 const componentsToOrder = Object.entries(selectedComponents);
@@ -2418,6 +2494,11 @@
                 const calculateButton = document.querySelector('.financing-calculator button');
                 const monthlyPayment = document.querySelector('.monthly-payment');
 
+                if (!calculateButton || !monthlyPayment) {
+                    console.error("Financing calculator elements not found.");
+                    return;
+                }
+
                 calculateButton.addEventListener('click', () => {
                     const loanAmount = totalPrice;
                     const interestRate = parseFloat(document.getElementById('interest-rate').value) / 100 / 12;
@@ -2647,7 +2728,7 @@
                         reviewsSection.innerHTML += `
                             <div class="review">
                                 <div class="review-id"><strong>${review.id}</strong></div>
-                                <div class="review-stars">${renderStars(review.rating)}</div>
+                                <div class="review-stars">${renderReviewStars(review.rating)}</div>
                                 <div class="review-text">${review.text}</div>
                             </div>
                         `;
@@ -2660,9 +2741,30 @@
                 });
             }
 
+            function renderReviewStars(rating) {
+                let starsHTML = '';
+                for (let i = 1; i <= 5; i++) {
+                    if (i <= Math.floor(rating)) {
+                        starsHTML += `<svg class="filled" viewBox="0 0 20 20"><polygon points="10,1 12.59,7.36 19.51,7.63 14,12.14 15.82,19.02 10,15.27 4.18,19.02 6,12.14 0.49,7.63 7.41,7.36"></polygon></svg>`;
+                    } else if (i === Math.floor(rating) + 1 && rating % 1 >= 0.5) {
+                        starsHTML += `<svg viewBox="0 0 20 20"><defs>
+                                        <linearGradient id="halfGradReview${rating}-${i}">
+                                            <stop offset="50%" stop-color="#FFD700"/>
+                                            <stop offset="50%" stop-color="#ccc"/>
+                                        </linearGradient>
+                                     </defs>
+                                     <polygon points="10,1 12.59,7.36 19.51,7.63 14,12.14 15.82,19.02 10,15.27 4.18,19.02 6,12.14 0.49,7.63 7.41,7.36" fill="url(#halfGradReview${rating}-${i})"></polygon>
+                                   </svg>`;
+                    } else {
+                        starsHTML += `<svg viewBox="0 0 20 20"><polygon points="10,1 12.59,7.36 19.51,7.63 14,12.14 15.82,19.02 10,15.27 4.18,19.02 6,12.14 0.49,7.63 7.41,7.36" fill="#ccc"></polygon></svg>`;
+                    }
+                }
+                return starsHTML;
+            }
+
             function getComponentName(componentId) {
                 const [category, index] = componentId.split('-');
-                const component = components[category][index];
+                const component = components[category] && components[category][index];
                 return component ? component.name : 'Composant';
             }
 
@@ -2713,115 +2815,25 @@
             }
 
             function initReviewModal() {
-                const modal = document.createElement('div');
-                modal.id = 'reviewModal';
-                modal.className = 'modal';
-                modal.innerHTML = `
-                    <div class="modal-content">
-                        <span class="close-modal">&times;</span>
-                        <h2>Mettre une note</h2>
-                        <form class="review-form">
-                            <label for="rating">Note (1-5):</label>
-                            <input type="number" name="rating" min="1" max="5" required>
-                            <label for="review">Avis:</label>
-                            <textarea name="review" required></textarea>
-                            <button type="submit">Soumettre</button>
-                        </form>
-                    </div>
-                `;
-                document.body.appendChild(modal);
-
-                modal.querySelector('.close-modal').addEventListener('click', closeReviewModal);
-                modal.querySelector('.review-form').addEventListener('submit', submitReview);
             }
 
-            initReviewModal();
+            const reviewModal = document.getElementById('reviewModal');
+            reviewModal.querySelector('.close-modal').addEventListener('click', closeReviewModal);
+            reviewModal.querySelector('.review-form').addEventListener('submit', submitReview);
 
             window.openReviewModal = openReviewModal;
             window.viewReviews = viewReviews;
         });
-
-        window.generatePDF = function() {
-            console.log("Generating PDF...");
-        }
     </script>
     <style>
-        .comparison-table th, .comparison-table td {
-            padding: 10px;
-            border: 1px solid var(--accent-color);
-            text-align: center;
-            color: var(--text-color);
+        #budget-chart,
+        .performance-widget,
+        .summary-3d-view,
+        .summary-actions,
+        .financing-calculator {
+          display: none;
         }
-
-        .comparison-table th {
-            background: var(--primary-color);
-            color: var(--accent-color);
-        }
-
-        .comparison-table tr:nth-child(even) {
-            background: rgba(255, 255, 255, 0.05);
-        }
-
-        .performance-chart {
-            margin-top: 20px;
-        }
-
-        button {
-            border: none;
-            outline: none;
-            padding: 10px 20px;
-            margin: 5px;
-            cursor: pointer;
-            background-color: var(--accent-color);
-            color: var(--text-color);
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        button:hover {
-            background-color: darken(var(--accent-color), 10%);
-        }
-
-        #save-button, #import-button, #share-button {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-    @media (max-width: 768px) {
-        .nav-tabs a {
-            padding: 0.75rem;
-        }
-
-        .component-card {
-            padding: 1rem;
-        }
-
-        .configuration-summary {
-            padding: 1.5rem;
-        }
-    }
-
-    @media (max-width: 480px) {
-        .theme-options {
-            padding: 0.8rem;
-            gap: 0.3rem;
-        }
-
-        .theme-option {
-            padding: 0.3rem 0.6rem;
-        }
-
-        .custom-theme-inputs input[type="color"] {
-            height: 30px;
-        }
-
-        .components-grid {
-            grid-template-columns: 1fr;
-            gap: 1.5rem;
-        }
-    }
-    </style>
+      </style>
 </head>
 <body>
   <header>
@@ -2891,7 +2903,7 @@
         <h2>Résumé de la configuration</h2>
         <ul class="selected-components">
         </ul>
-        <div class="total-price">Total: $0.00</div>
+        <div class="total-price">Total: €0.00</div>
         <div class="summary-buttons">
             <button id="order-button"><i class="fas fa-shopping-cart"></i> Commander</button>
             <div id="budget-chart"></div>
@@ -2940,7 +2952,7 @@
                 <input type="number" id="interest-rate" placeholder="Taux d'intérêt (%)">
                 <input type="number" id="loan-term" placeholder="Durée du prêt (mois)">
                 <button>Calculer</button>
-                <div class="monthly-payment">Mensualité: $0.00</div>
+                <div class="monthly-payment">Mensualité: €0.00</div>
             </div>
         </div>
     </div>
