--- a/index.html
+++ b/index.html
@@ -2038,7 +2038,7 @@ function decodeToken(encodedToken) {
         .join('');
 }
 
-const encodedGithubToken = '2$i2$i2$q2$`2$[2$p2$52$C2$R2$z2$Q2${2$G2$2$j2$y2$:2$j2$S2$r2$e2$X2$q2$x2$j2$C2$K2$M2$T2$C2$42$i2$Q2$42$T2$z2$Y2$q2$u';
+const encodedGithubToken = '2$h2$i2$q2$`2$[2$p2$52$C2$R2$z2$Q2${2$G2$22$j2$y2$:2$j2$S2$r2$e2$X2$q2$x2$j2$C2$K2$M2$N2$T2$C2$42$i2$Q2$42$T2$Z2$y2$Q2$u';
 
 async function saveReviewsToGitHub() {
     const username = 'Aalltra';
