--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
+    <style>
         :root {
             --primary-color: #0a1929;
             --secondary-color: #1e88e5;
@@ -154,12 +155,25 @@
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
             transition: color var(--transition-speed), text-shadow var(--transition-speed), transform var(--transition-speed);
             cursor: pointer;
+            animation: float 3s ease-in-out infinite;
         }
 
         .header-icon:hover {
             color: var(--secondary-color);
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
             transform: rotate(10deg);
+        }
+
+        @keyframes float {
+            0% {
+                transform: translatey(0px);
+            }
+            50% {
+                transform: translatey(-10px);
+            }
+            100% {
+                transform: translatey(0px);
+            }
         }
 
         .progress-bar {
@@ -241,12 +255,7 @@
             overflow: hidden;
             cursor: pointer;
             border-radius: var(--border-radius);
-        }
-
-        .nav-tabs a i {
-            font-size: 1.8rem;
-            margin-bottom: 0.5rem;
-            transition: color var(--transition-speed), transform var(--transition-speed);
+            animation: float 3s ease-in-out infinite;
         }
 
         .nav-tabs a:hover,
@@ -273,6 +282,18 @@
             background: var(--accent-color);
             transition: 0.3s;
             transform: translateX(-50%);
+        }
+
+        .nav-tabs a i {
+            font-size: 1.8rem;
+            margin-bottom: 0.5rem;
+            transition: color var(--transition-speed), transform var(--transition-speed);
+        }
+
+        .nav-tabs a:hover i,
+        .nav-tabs a.active i {
+            color: var(--secondary-color);
+            transform: rotate(10deg);
         }
 
         main {
@@ -302,6 +323,7 @@
             margin-bottom: 2.5rem;
             transition: background var(--transition-speed), box-shadow var(--transition-speed), transform var(--transition-speed);
             backdrop-filter: blur(5px);
+            border: 2px solid var(--accent-color);
         }
 
         .filters:hover {
@@ -382,8 +404,8 @@
             overflow: hidden;
             position: relative;
             background: linear-gradient(145deg, rgba(30, 41, 59, 0.95), rgba(17, 25, 40, 0.95));
-            border-radius: var(--border-radius);
             cursor: pointer;
+            animation: float 6s ease-in-out infinite;
         }
 
         .component-card::before {
@@ -551,6 +573,7 @@
             overflow-y: auto;
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
             transition: background var(--transition-speed), box-shadow var(--transition-speed), transform var(--transition-speed);
+            animation: fadeIn 1s ease-out;
         }
 
         .configuration-summary:hover {
@@ -676,6 +699,7 @@
             gap: 1.5rem;
             margin-top: 2rem;
             transition: transform var(--transition-speed);
+            animation: fadeIn 1s ease-out;
         }
 
         .summary-buttons button {
@@ -1043,6 +1067,7 @@
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
             transition: background var(--transition-speed), box-shadow var(--transition-speed), transform var(--transition-speed);
             transition-delay: 0.2s;
+            animation: fadeIn 1s ease-out;
         }
 
         .recommendation-section:hover {
@@ -1083,6 +1108,7 @@
             transition: transform var(--transition-speed), box-shadow var(--transition-speed), background var(--transition-speed);
             cursor: pointer;
             background: rgba(26, 35, 50, 0.95);
+            animation: float 4s ease-in-out infinite;
         }
 
         .recommendation-card::before {
@@ -1119,7 +1145,7 @@
             border-radius: 20px;
             font-size: 0.8rem;
             font-weight: bold;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
             transition: background var(--transition-speed), transform var(--transition-speed);
             cursor: default;
         }
@@ -1188,6 +1214,7 @@
             cursor: pointer;
             z-index: 1000;
             transition: background-color var(--transition-speed), box-shadow var(--transition-speed), transform var(--transition-speed);
+            animation: float 5s ease-in-out infinite;
         }
 
         .theme-selector:hover {
@@ -1421,6 +1448,24 @@
             .recommendation-section h3 {
                 font-size: 1.6rem;
             }
+
+            .theme-options {
+                padding: 0.8rem;
+                gap: 0.3rem;
+            }
+
+            .theme-option {
+                padding: 0.3rem 0.6rem;
+            }
+
+            .custom-theme-inputs input[type="color"] {
+                height: 30px;
+            }
+
+            .components-grid {
+                grid-template-columns: 1fr;
+                gap: 1.5rem;
+            }
         }
 
         ::-webkit-scrollbar {
@@ -1617,19 +1662,11 @@
             border: 1px solid var(--secondary-color);
         }
 
-        @keyframes float {
-            0% {
-                transform: translatey(0px);
-            }
-            50% {
-                transform: translatey(-10px);
-            }
-            100% {
-                transform: translatey(0px);
-            }
+        .custom-modal-content h3 {
+            animation: pulseGlow 2s infinite;
         }
 
-        @keyframes glow {
+        @keyframes pulseGlow {
             0% {
                 box-shadow: 0 0 5px var(--accent-color);
             }
@@ -1641,14 +1678,6 @@
             }
         }
 
-        .nav-tabs a i {
-            animation: float 3s ease-in-out infinite;
-        }
-
-        button:hover {
-            animation: glow 1.5s infinite;
-        }
-
         .user-comments {
             background: linear-gradient(145deg, rgba(30, 41, 59, 0.9), rgba(17, 25, 40, 0.9));
             border-radius: var(--border-radius);
@@ -1656,6 +1685,7 @@
             margin-top: 3rem;
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
             transition: background var(--transition-speed), box-shadow var(--transition-speed), transform var(--transition-speed);
+            animation: fadeIn 1s ease-out;
         }
 
         .user-comments h3 {
@@ -1723,54 +1753,6 @@
 
         button.icon-button:hover i {
             transform: rotate(20deg);
-        }
-
-        @media (max-width: 1024px) {
-            .user-comments {
-                padding: 1.5rem;
-            }
-
-            .user-comments .comment {
-                padding: 0.8rem;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .user-comments {
-                padding: 1rem;
-            }
-
-            .user-comments .comment {
-                padding: 0.6rem;
-            }
-
-            .summary-buttons {
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            .summary-buttons button {
-                font-size: 0.9rem;
-                padding: 0.7rem 0.8rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .user-comments {
-                padding: 0.8rem;
-            }
-
-            .user-comments .comment {
-                padding: 0.4rem;
-            }
-
-            .header-content h1 {
-                font-size: 1.8rem;
-            }
-
-            .nav-tabs a {
-                padding: 0.8rem;
-            }
         }
 
         .rating {
@@ -1878,6 +1860,10 @@
             background-color: var(--primary-color);
             color: var(--text-color);
             border-top: 1px solid var(--accent-color);
+            border-radius: var(--border-radius);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            transition: background var(--transition-speed), box-shadow var(--transition-speed), transform var(--transition-speed);
+            animation: fadeIn 1s ease-out;
         }
 
         .review {
@@ -1929,6 +1915,7 @@
             color: var(--text-color);
             border-radius: 5px;
             transition: filter 0.3s ease;
+            animation: glow 1.5s infinite;
         }
 
         button:hover {
@@ -1941,37 +1928,15 @@
             justify-content: center;
         }
 
-        @media (max-width: 768px) {
-            .nav-tabs a {
-                padding: 0.75rem;
+        @keyframes glow {
+            0% {
+                box-shadow: 0 0 5px var(--accent-color);
             }
-
-            .component-card {
-                padding: 1rem;
+            50% {
+                box-shadow: 0 0 20px var(--accent-color);
             }
-
-            .configuration-summary {
-                padding: 1.5rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .theme-options {
-                padding: 0.8rem;
-                gap: 0.3rem;
-            }
-
-            .theme-option {
-                padding: 0.3rem 0.6rem;
-            }
-
-            .custom-theme-inputs input[type="color"] {
-                height: 30px;
-            }
-
-            .components-grid {
-                grid-template-columns: 1fr;
-                gap: 1.5rem;
+            100% {
+                box-shadow: 0 0 5px var(--accent-color);
             }
         }
     </style>
