--- a/index.html
+++ b/index.html
@@ -2925,14 +2925,14 @@
   <nav>
     <div class="container">
       <ul class="nav-tabs">
-        <li><a href="https://example.com/#cpu"><i class="fas fa-microchip"></i>CPU</a></li>
-        <li><a href="https://example.com/#motherboard"><i class="fas fa-server"></i>Carte mère</a></li>
-        <li><a href="https://example.com/#ram"><i class="fas fa-memory"></i>RAM</a></li>
-        <li><a href="https://example.com/#gpu"><i class="fas fa-tv"></i>GPU</a></li>
-        <li><a href="https://example.com/#storage"><i class="fas fa-hdd"></i>Stockage</a></li>
-        <li><a href="https://example.com/#psu"><i class="fas fa-plug"></i>Alimentation</a></li>
-        <li><a href="https://example.com/#case"><i class="fas fa-desktop"></i>Boîtier</a></li>
-        <li><a href="https://example.com/#cooling"><i class="fas fa-fan"></i>Refroidissement</a></li>
+        <li><a href="#cpu"><i class="fas fa-microchip"></i>CPU</a></li>
+        <li><a href="#motherboard"><i class="fas fa-server"></i>Carte mère</a></li>
+        <li><a href="#ram"><i class="fas fa-memory"></i>RAM</a></li>
+        <li><a href="#gpu"><i class="fas fa-tv"></i>GPU</a></li>
+        <li><a href="#storage"><i class="fas fa-hdd"></i>Stockage</a></li>
+        <li><a href="#psu"><i class="fas fa-plug"></i>Alimentation</a></li>
+        <li><a href="#case"><i class="fas fa-desktop"></i>Boîtier</a></li>
+        <li><a href="#cooling"><i class="fas fa-fan"></i>Refroidissement</a></li>
       </ul>
     </div>
   </nav>
