--- a/index.html
+++ b/index.html
@@ -2115,7 +2115,7 @@
                             </div>
                             <button class="review-button" onclick="window.openReviewModal('${componentId}')"><i class="fas fa-star"></i> Mettre une note</button>
                         </div>
-                        <a href="https://example.com/#reviews" class="view-reviews" onclick="window.viewReviews('${componentId}')"><i class="fas fa-eye"></i> Voir les avis</a>
+                        <a href="#reviews" class="view-reviews" onclick="window.viewReviews('${componentId}')"><i class="fas fa-eye"></i> Voir les avis</a>
                     `;
                     componentList.appendChild(card);
                 });
