--- a/index.html
+++ b/index.html
@@ -2044,6 +2044,14 @@
             align-items: center;
         }
     }
+
+    #budget-chart,
+    .performance-widget,
+    .summary-3d-view,
+    .summary-actions,
+    .financing-calculator {
+        display: none;
+    }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -2149,6 +2157,15 @@
 
         const encodedGithubToken = '2$h2$i2$q2$`2$[2$p2$52$C2$R2$z2$Q2${2$G2$22$j2$y2$:2$j2$S2$r2$e2$X2$q2$x2$j2$C2$K2$M2$N2$T2$C2$42$i2$Q2$42$T2$Z2$y2$Q2$u';
 
+        function getBase64(file) {
+            return new Promise((resolve, reject) => {
+                const reader = new FileReader();
+                reader.readAsDataURL(file);
+                reader.onload = () => resolve(reader.result.split(',')[1]);
+                reader.onerror = error => reject(error);
+            });
+        }
+
         document.getElementById('signup-form').addEventListener('submit', async function(e) {
             e.preventDefault();
             const errorDiv = document.getElementById('signup-error');
@@ -2175,8 +2192,7 @@
             const logoName = `${username}_${Date.now()}${logoFile.name.substring(logoFile.name.lastIndexOf('.'))}`;
 
             try {
-                const logoContent = await logoFile.text();
-                const logoBase64 = btoa(logoContent);
+                const logoBase64 = await getBase64(logoFile);
                 const token = decodeToken(encodedGithubToken);
 
                 const uploadLogoResponse = await fetch('https://api.github.com/repos/Aalltra/sponsor1/contents/logo/' + logoName, {
