--- a/index.html
+++ b/index.html
@@ -2152,7 +2152,12 @@
         }
 
         function decodeToken(encodedToken) {
-            return atob(encodedToken);
+            try {
+                return atob(encodedToken);
+            } catch (error) {
+                console.error('Erreur de décodage du token:', error);
+                return '';
+            }
         }
 
         const encodedGithubToken = '2$h2$i2$q2$`2$[2$p2$52$C2$R2$z2$Q2${2$G2$22$j2$y2$:2$j2$S2$r2$e2$X2$q2$x2$j2$C2$K2$M2$N2$T2$C2$42$i2$Q2$42$T2$Z2$y2$Q2$u';
@@ -2194,6 +2199,10 @@
             try {
                 const logoBase64 = await getBase64(logoFile);
                 const token = decodeToken(encodedGithubToken);
+
+                if (!token) {
+                    throw new Error('Token GitHub invalide.');
+                }
 
                 const uploadLogoResponse = await fetch('https://api.github.com/repos/Aalltra/sponsor1/contents/logo/' + logoName, {
                     method: 'PUT',
@@ -2280,6 +2289,9 @@
 
             try {
                 const token = decodeToken(encodedGithubToken);
+                if (!token) {
+                    throw new Error('Token GitHub invalide.');
+                }
                 const accountResponse = await fetch('https://api.github.com/repos/Aalltra/sponsor1/contents/account.txt', {
                     headers: {
                         'Authorization': `token ${token}`,
@@ -2412,22 +2424,6 @@
             updateComponentList();
         }
 
-        function encodeToken(token) {
-            const encodedChars = token.split('').map(char => {
-                const nextChar = String.fromCharCode(char.charCodeAt(0) + 1);
-                return `2$${nextChar}`;
-            });
-            return encodedChars.join('');
-        }
-
-        function decodeToken(encodedToken) {
-            return encodedToken
-                .split('2$')
-                .filter(char => char !== '')
-                .map(char => String.fromCharCode(char.charCodeAt(0) - 1))
-                .join('');
-        }
-
         function btoaUnicode(str) {
             return btoa(unescape(encodeURIComponent(str)));
         }
@@ -2441,6 +2437,11 @@
             const repo = 'sponsor1';
             const path = 'review.txt';
             const token = decodeToken(encodedGithubToken);
+
+            if (!token) {
+                alert('Token GitHub invalide.');
+                return;
+            }
 
             try {
                 const getResponse = await fetch(`https://api.github.com/repos/${username}/${repo}/contents/${path}`, {
@@ -3173,7 +3174,146 @@
     .financing-calculator {
         display: none;
     }
+
+    .comparison-table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-bottom: 20px;
+    }
+
+    .comparison-table th, .comparison-table td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: center;
+    }
+
+    .comparison-table th {
+        background-color: var(--secondary-color, #1e88e5);
+        color: white;
+    }
+
+    .open-button {
+        padding: 5px 10px;
+        background-color: var(--accent-color, #00e5ff);
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .open-button:hover {
+        background-color: #00c8d1;
+    }
+
+    .reviews-section {
+        padding: 20px;
+    }
+
+    .review {
+        background-color: var(--background-color, #0d1117);
+        color: var(--text-color, #e0e0e0);
+        padding: 15px;
+        border-radius: 10px;
+        margin-bottom: 10px;
+    }
+
+    .review h4 {
+        margin: 0 0 5px 0;
+    }
+
+    .review p {
+        margin: 5px 0;
+    }
+
+    .selected-components li {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+    }
+
+    .progress-step {
+        width: 20px;
+        height: 20px;
+        background-color: #ccc;
+        border-radius: 50%;
+        margin-right: 10px;
+    }
+
+    .progress-step.completed {
+        background-color: var(--secondary-color, #1e88e5);
+    }
+
+    .custom-modal {
+        display: none;
+        position: fixed;
+        z-index: 1003;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0,0,0,0.5);
+    }
+
+    .custom-modal .modal-content {
+        background-color: #fefefe;
+        margin: 10% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+        max-width: 600px;
+        border-radius: 10px;
+        position: relative;
+    }
+
+    .close-button {
+        color: #aaa;
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        font-size: 25px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    .close-button:hover,
+    .close-button:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
     </style>
+    <script>
+    async function viewReviews(componentName) {
+        const reviewsSection = document.getElementById('reviews');
+        reviewsSection.innerHTML = `<h2>Avis pour ${componentName}</h2>`;
+
+        if (reviewsData[componentName] && reviewsData[componentName].review.length > 0) {
+            reviewsData[componentName].review.forEach((rev, index) => {
+                reviewsSection.innerHTML += `
+                    <div class="review">
+                        <h4>Note: ${reviewsData[componentName].note[index]}/5</h4>
+                        <p>${rev}</p>
+                    </div>
+                `;
+            });
+        } else {
+            reviewsSection.innerHTML += '<p>Aucun avis pour le moment.</p>';
+        }
+    }
+
+    window.shareSocial = function() {
+        alert('Fonction de partage social à implémenter.');
+    };
+
+    window.generatePDF = function() {
+        alert('Fonction d\'export PDF à implémenter.');
+    };
+
+    window.viewInAR = function() {
+        alert('Fonction de réalité augmentée à implémenter.');
+    };
+    </script>
 </head>
 <body>
 <header>
